--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="slides">
             <div class="slide"><a href="questionnaire.html"><img src="question.jpg" alt="Image 1"></a></div>
             <div class="slide"><a href="calculation.html"><img src="calc.jpg" alt="Image 2"></a></div>
-            <div class="slide"><a href="funpage.html"><img src="Fun.jpg" alt="Image 3"></a></div>
+            <div class="slide"><a href="funpage.html"><img src="fun.jpg" alt="Image 3"></a></div>
             <div class="slide"><a href=" "><img src="empty.jpeg" alt="placeholder"></a></div>
           </div>
         </div>
