--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
                     <a href="#">Forgot Password?</a>
                 </div>
 
-                <button type="submit" class="btn">Login</button>
+                <a href="index.html"><button type="submit" class="btn">Login</button></a>
 
                 <div class="register-link">
                     <p>
