--- a/login.html
+++ b/login.html
@@ -128,12 +128,12 @@
                     <a href="#">Forgot Password?</a>
                 </div>
 
-                <a href="index.html"><button type="submit" class="btn">Login</button></a>
+                <a href="index.html"><button class="btn">Login</button></a>
 
                 <div class="register-link">
                     <p>
                         Don't have an account?
-                        <a href="#">Register</a><!--add link for register-->
+                        <a href="index.html">Register</a><!--add link for register-->
                     </p>
                 </div>
             </form>
