--- a/login.html
+++ b/login.html
@@ -113,7 +113,7 @@
     </style>
     <body>
         <div class="wrapper">
-            <form method="get" >
+            <form >
                 <h1>Login</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Username" required name="username">
