--- a/funpage.html
+++ b/funpage.html
@@ -86,6 +86,17 @@
           </div>
         </div>
         <script src="game.js"></script>
+        <pre>
+
+
+
+
+
+
+
+
+          
+        </pre>
       </div>
     </div>
     <footer id="footer">
