--- a/calculation.html
+++ b/calculation.html
@@ -73,9 +73,28 @@
                 <button onclick="calculateROI()">Calculate ROI</button>
                 <button onclick="calculateCPDR()">Calculate CPDR</button>
                 <div id="result"></div>
+                <script src="calculator.js"></script>
             </div>
-            <script src="calculator.js"></script>
         </div>
+        <pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          .
+        </pre>
       </div>
     </div>
     <footer id="footer">
