--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,12 @@
       <div class="mainContent">
         <div class="text-box">
         <h1>Contact Us</h1>
-          <form method="get" action="httpbin.org/get">
+          <form method="get" action="feedback.php">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
+            <input type="text" id="name" name="fname" required><br><br>
         
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
+            <input type="email" id="email" name="femail" required><br><br>
         
             <label for="message">Message:</label><br>
             <textarea id="message" name="message" rows="4" required></textarea><br><br>
