--- a/login.html
+++ b/login.html
@@ -113,30 +113,11 @@
     </style>
     <body>
         <div class="wrapper">
-            <form >
-                <h1>Login</h1>
-                <div class="input-box">
-                    <input type="text" placeholder="Username" required name="username">
-                    <i class="bx bxs-user"></i>
-                </div>
-                <div class="input-box">
-                    <input type="password" placeholder="Password" required name="password">
-                    <i class="bx bxs-lock-alt"></i>
-                </div>
-                <div class="Remember-Forget">
-                    <label><input type="checkbox">Remember me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
-
-                <a href="index.html"><button class="btn">Login</button></a>
-
-                <div class="register-link">
-                    <p>
-                        Don't have an account?
-                        <a href="index.html">Register</a><!--add link for register-->
-                    </p>
-                </div>
-            </form>
+            <h1>Login</h1>
+            <button class="btn"><a href="insert.php"></a>New User</button>
+            <button class="btn"><a href="delete.php"></a>Delete User</button>
+            <button class="btn"><a href="search.php"></a>search a user</button>
+            <button class="btn"><a href="update.php"></a>Update user</button>
         </div>
     </body>
 </html>
